--- a/index.html
+++ b/index.html
@@ -4,43 +4,70 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Your Simple Portfolio</title>
+  <title>Your Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <header>
-    <h1>Your Name</h1>
-    <p>Your profession or tagline</p>
+    <div class="container">
+      <h1>Pat</h1>
+      <p>Student</p>
+    </div>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hello! I'm a passionate [Your Profession]. I love [what you enjoy doing]. I specialize in [your skills].</p>
+  <section id="about" class="section">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>Hi, I'm Pat. I'm a passionate student exploring the world of [Your Profession]. I specialize in [Your Skills]. I love creating, learning new technologies, and collaborating on exciting projects.</p>
+    </div>
   </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <p>Here are a few projects I've worked on:</p>
-    <ul>
-      <li>Project 1: A brief description of your project.</li>
-      <li>Project 2: A brief description of your project.</li>
-      <li>Project 3: A brief description of your project.</li>
-    </ul>
+  <section id="photos" class="section">
+    <div class="container">
+      <h2>My Work</h2>
+      <div class="photo-gallery">
+        <div class="photo">
+          <img src="https://via.placeholder.com/250x250" alt="Photo 1">
+          <p>Photo 1 Description</p>
+        </div>
+        <div class="photo">
+          <img src="https://via.placeholder.com/250x250" alt="Photo 2">
+          <p>Photo 2 Description</p>
+        </div>
+        <div class="photo">
+          <img src="https://via.placeholder.com/250x250" alt="Photo 3">
+          <p>Photo 3 Description</p>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>You can reach me at:</p>
-    <ul>
-      <li>Email: yourname@example.com</li>
-      <li>LinkedIn: <a href="https://www.linkedin.com/in/yourname" target="_blank">Your LinkedIn Profile</a></li>
-      <li>GitHub: <a href="https://github.com/yourusername" target="_blank">Your GitHub Profile</a></li>
-    </ul>
+  <section id="project" class="section">
+    <div class="container">
+      <h2>Featured Project</h2>
+      <div class="project">
+        <img src="https://via.placeholder.com/600x400" alt="Project Image">
+        <p><strong>Project Title</strong></p>
+        <p>A brief description of your project. Highlight your skills, the tools you used, and the outcome of the project. Share any key features or results.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" class="section">
+    <div class="container">
+      <h2>Contact Me</h2>
+      <p>If you'd like to get in touch, feel free to reach out:</p>
+      <ul>
+        <li>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/yourname" target="_blank">Your LinkedIn Profile</a></li>
+        <li>GitHub: <a href="https://github.com/yourusername" target="_blank">Your GitHub Profile</a></li>
+      </ul>
+    </div>
   </section>
 
   <footer>
-    <p>&copy; 2024 Your Name</p>
+    <p>&copy; 2024 Pat. All Rights Reserved.</p>
   </footer>
 
 </body>
