Redid pics, colours,font, info

--- a/index.html
+++ b/index.html
@@ -12,32 +12,35 @@
   <header>
     <div class="container">
       <h1>Pat</h1>
-      <p>Student</p>
+      <p>★Student★</p>
     </div>
   </header>
 
   <section id="about" class="section">
     <div class="container">
-      <h2>About Me</h2>
-      <p>Hi, I'm Pat. I'm a passionate student exploring the world of [Your Profession]. I specialize in [Your Skills]. I love creating, learning new technologies, and collaborating on exciting projects.</p>
+      <h2>★About Me★</h2>
+      <p>Hello there. <br>
+        I'm a passionate student exploring the world of programming. <br>
+        I specialize in crime. <br>
+        I love creating, learning new technologies, and commiting arson :3</p>
     </div>
   </section>
 
   <section id="photos" class="section">
     <div class="container">
-      <h2>My Work</h2>
+      <h2>★Me!★</h2>
       <div class="photo-gallery">
         <div class="photo">
-          <img src="https://via.placeholder.com/250x250" alt="Photo 1">
-          <p>Photo 1 Description</p>
+          <img src="me1.jpg" alt="Photo 1">
+          <p>★Me :3★</p>
         </div>
         <div class="photo">
-          <img src="https://via.placeholder.com/250x250" alt="Photo 2">
-          <p>Photo 2 Description</p>
+          <img src="me.jpg" alt="Photo 2">
+          <p>★Me :3★</p>
         </div>
         <div class="photo">
-          <img src="https://via.placeholder.com/250x250" alt="Photo 3">
-          <p>Photo 3 Description</p>
+          <img src="me2.jpg" alt="Photo 3">
+          <p>★Me :3★</p>
         </div>
       </div>
     </div>
@@ -47,27 +50,27 @@
     <div class="container">
       <h2>Featured Project</h2>
       <div class="project">
-        <img src="https://via.placeholder.com/600x400" alt="Project Image">
-        <p><strong>Project Title</strong></p>
-        <p>A brief description of your project. Highlight your skills, the tools you used, and the outcome of the project. Share any key features or results.</p>
+        <img src="tarot.jpg" alt="Project Image">
+        <p class="tarothead"><strong>Tarot Card Meanings</strong></p>
+        <p>As someone who uses tarot cards as a divination tool, the little book can be annoying to use, so I would like to make a website you can find cards and their meanings for easier use.</p>
       </div>
     </div>
   </section>
 
   <section id="contact" class="section">
     <div class="container">
-      <h2>Contact Me</h2>
-      <p>If you'd like to get in touch, feel free to reach out:</p>
+      <h2>pls don't Contact Me</h2>
+      <p>If you'd like to get in touch, feel free NOT to reach out:</p>
       <ul>
-        <li>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></li>
-        <li>LinkedIn: <a href="https://www.linkedin.com/in/yourname" target="_blank">Your LinkedIn Profile</a></li>
-        <li>GitHub: <a href="https://github.com/yourusername" target="_blank">Your GitHub Profile</a></li>
+        <li>Email: <a href="mailto:yourname@example.com">yourmom@yahoo.com</a></li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/yourname" target="_blank">Your Mom's LinkedIn Profile</a></li>
+        <li>GitHub: <a href="https://github.com/yourusername" target="_blank">Your Dad's GitHub Profile</a></li>
       </ul>
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2024 Pat. All Rights Reserved.</p>
+    <p>&copy; 2024 YourMom. All Rights Reserved.</p>
   </footer>
 
 </body>
