--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Your Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="star.png">
 </head>
 <body>
 
